--- a/po/wesnoth-manual/de.po
+++ b/po/wesnoth-manual/de.po
@@ -5,9 +5,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.8\n"
-"POT-Creation-Date: 2012-01-06 11:46+0100\n"
-"PO-Revision-Date: 2012-01-19 14:56+0100\n"
-"Last-Translator: Gerfried Fuchs <rhonda@deb.at>\n"
+"POT-Creation-Date: 2012-01-08 18:11+0100\n"
+"PO-Revision-Date: 2012-01-20 13:33+0100\n"
+"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -271,15 +271,11 @@ msgstr ""
 # type: Content of: <book><chapter><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><simpara><inlinemediaobject>
 #: /src/wesnoth/doc/manual/manual.en.xml:90
-#, fuzzy
-#| msgid ""
-#| "<imageobject> <imagedata fileref=\"images/main-menu-1.5.11.jpg\"/> </"
-#| "imageobject>"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/main-menu-1.9.4.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/de/main-menu-1.5.11.jpg\"/> </"
+"<imageobject> <imagedata fileref=\"images/de/main-menu-1.9.14.jpg\"/> </"
 "imageobject>"
 
 #. type: Content of: <book><chapter><section><simpara><inlinemediaobject><textobject><phrase>
@@ -701,15 +697,11 @@ msgstr ""
 # type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #: /src/wesnoth/doc/manual/manual.en.xml:314
-#, fuzzy
-#| msgid ""
-#| "<imageobject> <imagedata fileref=\"images/multiplayer-1.5.11.jpg\"/> </"
-#| "imageobject>"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/multiplayer-1.9.4.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/de/multiplayer-1.5.11.jpg\"/> </"
+"<imageobject> <imagedata fileref=\"images/de/multiplayer-1.9.14.jpg\"/> </"
 "imageobject>"
 
 # type: Content of: <book><chapter><section><section><section><title>
@@ -893,15 +885,11 @@ msgstr "Der Spielbildschirm"
 # type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #: /src/wesnoth/doc/manual/manual.en.xml:379
-#, fuzzy
-#| msgid ""
-#| "<imageobject> <imagedata fileref=\"images/game-screen-1.5.7.jpg\"/> </"
-#| "imageobject>"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/game-screen-1.9.4.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/de/game-screen-1.5.7.jpg\"/> </"
+"<imageobject> <imagedata fileref=\"images/de/game-screen-1.9.14.jpg\"/> </"
 "imageobject>"
 
 # type: Content of: <book><chapter><section><section><title>
@@ -930,15 +918,11 @@ msgstr ""
 # type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #: /src/wesnoth/doc/manual/manual.en.xml:390
-#, fuzzy
-#| msgid ""
-#| "<imageobject> <imagedata fileref=\"images/top_pane-1.5.7.jpg\"/> </"
-#| "imageobject>"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/top_pane-1.9.4.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/de/top_pane-1.5.7.jpg\"/> </"
+"<imageobject> <imagedata fileref=\"images/de/top_pane-1.9.14.jpg\"/> </"
 "imageobject>"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
@@ -1032,15 +1016,11 @@ msgstr "Aktueller Geländetyp des Feldes"
 # type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #: /src/wesnoth/doc/manual/manual.en.xml:459
-#, fuzzy
-#| msgid ""
-#| "<imageobject> <imagedata fileref=\"images/right_pane-1.5.7.jpg\"/> </"
-#| "imageobject>"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/right_pane-1.9.4.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/de/right_pane-1.5.7.jpg\"/> </"
+"<imageobject> <imagedata fileref=\"images/de/right_pane-1.9.14.jpg\"/> </"
 "imageobject>"
 
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
@@ -2201,15 +2181,11 @@ msgstr "Ausbildung und Einberufung"
 # type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #: /src/wesnoth/doc/manual/manual.en.xml:1315
-#, fuzzy
-#| msgid ""
-#| "<imageobject> <imagedata fileref=\"images/recruit-1.5.7.jpg\"/> </"
-#| "imageobject>"
 msgid ""
 "<imageobject> <imagedata fileref=\"images/recruit-1.9.4.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/de/recruit-1.5.7.jpg\"/> </"
+"<imageobject> <imagedata fileref=\"images/de/recruit-1.9.14.jpg\"/> </"
 "imageobject>"
 
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
