--- a/po/wesnoth-units/de.po
+++ b/po/wesnoth-units/de.po
@@ -445,7 +445,7 @@ msgid ""
 msgstr ""
 "Piratengaleonen verhalten sich zu Handelsschiffen wie Wölfe zu Schafen. "
 "Schiffe, die mit Schätzen vollgeladen sind, sollten nicht alleine sein, weit "
-"weg vom Festland. Piratenschiffe helfen ihnen nicht durch Überladung zu "
+"weg vom Festland. Piratenschiffe helfen ihnen, nicht durch Überladung zu "
 "sinken, indem sie ihnen etwas von ihren Reichtümern abnehmen."
 
 #. [attack]: type=pierce
