updated Lithuanian and Italian translation

--- a/po/wesnoth-dm/lt.po
+++ b/po/wesnoth-dm/lt.po
@@ -3479,7 +3479,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/Delfadors_Memoirs/scenarios/18_The_Portal_of_Doom.cfg:299
 msgid "All the player’s units must reach the tunnel. Then Delfador."
-msgstr "Visi priešo daliniai turi pasiekti tunelį. Tada Delfadoras."
+msgstr "Visi jūsų daliniai turi pasiekti tunelį. Tada Delfadoras."
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/18_The_Portal_of_Doom.cfg:364
