--- a/po/wesnoth-units/it.po
+++ b/po/wesnoth-units/it.po
@@ -12,9 +12,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-11-19 17:48+0100\n"
-"Last-Translator: Antonio Rosella <arosella@yahoo.com>\n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2012-01-20 16:57+0100\n"
+"Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -30,16 +30,6 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Masked Dragonguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Dragonguard.cfg:18
 #: data/core/units/dwarves/Dragonguard.cfg:20
-#, fuzzy
-#| msgid ""
-#| "It is not clear why the Dragonguards are called what they are, a name "
-#| "given by their dwarven brethren. Some speculate that the name comes from "
-#| "their weapon of choice, these strange staffs that belch fire and death. "
-#| "Others have surmised that it is because such weapons would be a threat "
-#| "against even a true Dragon, should such a thing be seen again in the "
-#| "known world. Whatever the case, it is for these weapons that the "
-#| "guardians of the great Dwarven citadels are both renowned and feared; "
-#| "weapons that have broken the mightiest of warriors with a single blow."
 msgid ""
 "It is not clear why the Dragonguards are called what they are, a name given "
 "by their dwarven brethren. Some speculate that the name comes from their "
@@ -56,7 +46,7 @@ msgstr ""
 "suppongono che è perché tali armi sarebbero una minaccia anche per un vero "
 "drago, se mai ne comparisse un altro nel mondo conosciuto. Qualunque sia la "
 "risposta, è a causa di queste armi che i guardiani delle imponenti "
-"cittadelle dei nani sono temuti e rispettati; armi che hanno abbattuto i più "
+"cittadelle dei nani sono temuti e rispettati: armi che hanno abbattuto i più "
 "leggendari guerrieri in un solo colpo."
 
 #. [attack]: type=blade
@@ -276,19 +266,6 @@ msgstr "Bastone tonante"
 #. [unit_type]: id=Dwarvish Masked Thunderguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Thunderguard.cfg:21
 #: data/core/units/dwarves/Thunderguard.cfg:21
-#, fuzzy
-#| msgid ""
-#| "The Dwarven Thunderguards are famed for their curious weaponry, these "
-#| "strange staffs of wood and iron that make a thunderous noise in their "
-#| "anger. The machinations behind this weaponry are a mystery, a secret "
-#| "taken to the grave by the dwarves of Knalga who wield them, and are "
-#| "assumed to have even forged them. The most that is known are reports of "
-#| "dwarves pouring a strange black dust into the mouth of their weapons, "
-#| "which some say is a food to fuel the beast imprisoned within.\n"
-#| "\n"
-#| "Though a single shot from these ‘thundersticks’ can take several minutes "
-#| "to prepare, the results are seen by the Dwarves as being well worth the "
-#| "wait."
 msgid ""
 "The Dwarven Thunderguards are famed for their curious weaponry, these "
 "strange staves of wood and iron that make a thunderous noise in their anger. "
@@ -574,6 +551,13 @@ msgid ""
 "around; Blademasters fiercely protect their fellows’ honor, and no-one would "
 "dispute their right to do so."
 msgstr ""
+"Un'armatura nera contrassegna l'ordine di eccellenza della casta dei "
+"Guerrieri: il maestro di spada. Pochi riescono a raggiungere l'abilità ed la "
+"potenza necessaria per essere ammessi in questa casta superiore senza morire "
+"in battaglia. Sebbene gli altri draghi possano denigrare la casta dei "
+"guerrieri, verificano sempre due volte che non ce ne sia qualcuno nei "
+"paraggi. Un maestro di spada protegge ferocemente l'onere dei suoi compagni, "
+"e nessuno si azzarda a mettere in discussione il loro diritto di fare così."
 
 #. [attack]: type=blade
 #: data/core/units/drakes/Blademaster.cfg:40
@@ -618,7 +602,7 @@ msgstr "artigli"
 #. [unit_type]: id=Drake Clasher, race=drake
 #: data/core/units/drakes/Clasher.cfg:4
 msgid "Drake Clasher"
-msgstr "Drago corazzato"
+msgstr "Drago impattatore"
 
 #. [unit_type]: id=Drake Clasher, race=drake
 #: data/core/units/drakes/Clasher.cfg:22
@@ -635,6 +619,18 @@ msgid ""
 "particularly good at \"resolving\" territorial disputes with other drakes "
 "and enforcing the laws of their tribe."
 msgstr ""
+"Gli Impattatori sono menbri di una particolare casta fra i draghi. La loro "
+"spessa armatura è così pesante ed ingombrante che, sebbene compensi la "
+"naturale debolezza dei draghi rispetto alle lance ed alle frecce, impedisce "
+"loro di volare e di raccogliere abbastanza fiato per usare il loro fuoco "
+"interno. Ma loro hanno accettato questo handicap, incassando completamente "
+"le loro ali nell'armatura, per enfatizzare che non hanno bisogno di volare "
+"per trionfare in battaglia\n"
+"\n"
+"Questa è anche l'unica casta alla quale sia permesso di infrangere il tabù e "
+"combattere con le lance in aggiunta ai tradizionali artigli di metallo dei "
+"draghi. Questo particolare li rende particolarmente adatti a «risolvere» le "
+"dispute territoriali fra draghi ed a far rispettare la legge della loro tribù"
 
 #. [unit_type]: id=Drake Enforcer, race=drake
 #: data/core/units/drakes/Enforcer.cfg:4
@@ -823,9 +819,8 @@ msgstr ""
 
 #. [unit_type]: id=Drake Thrasher, race=drake
 #: data/core/units/drakes/Thrasher.cfg:4
-#, fuzzy
 msgid "Drake Thrasher"
-msgstr "Drago corazzato"
+msgstr "Drago massacratore"
 
 #. [unit_type]: id=Drake Thrasher, race=drake
 #: data/core/units/drakes/Thrasher.cfg:19
@@ -837,6 +832,14 @@ msgid ""
 "are weapons. A Thrasher will gladly fulfill his caste duties, as long as it "
 "can be done on the battlefield."
 msgstr ""
+"Invece di accettare di essere limitati dalla loro armatura, i draghi "
+"massacratori hanno imparato ad indirizzare il loro peso in modo da aumentare "
+"l'inerzia del loro corpo, aggiungendo potenza al colpo delle loro corte "
+"lance e degli artigli supplementari montati sui loro arti superiori. "
+"Equipaggiamento e corpo formano così un tutt'uno: persino i loro massicci "
+"elmi e lo spesso cranio sottostante sono considerate delle armi. un drago "
+"corazzato adempirà volentieri ai suoi doveri di casta, fintanto che possa "
+"essere fatto sul campo di battaglia."
 
 #. [unit_type]: id=Drake Warden, race=drake
 #: data/core/units/drakes/Warden.cfg:4
@@ -873,7 +876,6 @@ msgstr ""
 
 #. [unit_type]: id=Dwarvish Arcanister, race=dwarf
 #: data/core/units/dwarves/Arcanister.cfg:4
-#, fuzzy
 msgid "Dwarvish Arcanister"
 msgstr "Nano arcanista"
 
@@ -971,7 +973,6 @@ msgstr "Nano pioniere"
 
 #. [unit_type]: id=Dwarvish Pathfinder, race=dwarf
 #: data/core/units/dwarves/Pathfinder.cfg:23
-#, fuzzy
 msgid ""
 "These hardy dwarves are sometimes away from their caves for long periods, "
 "scouting and patrolling the borders. They spend this time watching for "
@@ -980,14 +981,13 @@ msgid ""
 "deftly thrown axes can rival the power and accuracy of a human archer."
 msgstr ""
 "Questi rudi nani stanno a volte lontani dalle loro caverne per lunghi "
-"periodi, in esplorazione o a difesa dei confini. Passano il tempo in cerca "
-"di nemici e combattendo banditi e lacri che sconfinano nei loro territori. "
+"periodi, in esplorazione e a difesa dei confini. Passano il tempo in cerca "
+"di nemici e combattendo banditi e ladri che sconfinano nei loro territori. "
 "Sono abili combattenti nella mischia, e a distanza lanciano le loro asce con "
 "accuratezza e potenza analoghe a quelle dei migliori arcieri umani."
 
 #. [unit_type]: id=Dwarvish Runesmith, race=dwarf
 #: data/core/units/dwarves/Runesmith.cfg:4
-#, fuzzy
 msgid "Dwarvish Runesmith"
 msgstr "Nano fabbro delle rune"
 
@@ -1409,7 +1409,6 @@ msgstr "Elfo tiratore scelto"
 
 #. [unit_type]: id=Elvish Marksman, race=elf
 #: data/core/units/elves/Marksman.cfg:19
-#, fuzzy
 msgid ""
 "Elves are wonderously keen-sighted, a gift which contributes to their "
 "mastery of the bow. An elf practiced at archery can hit targets that a man "
@@ -1615,7 +1614,6 @@ msgstr "Fata"
 
 #. [unit_type]: id=Elvish Shyde, race=elf
 #: data/core/units/elves/Shyde.cfg:22
-#, fuzzy
 msgid ""
 "Devotion to the path of faerie may eventually transform an elf maiden into a "
 "creature of both worlds. Guided by a power which is little understood, these "
@@ -2292,7 +2290,6 @@ msgstr "Alabardiere"
 
 #. [unit_type]: id=Halberdier, race=human
 #: data/core/units/humans/Loyalist_Halberdier.cfg:21
-#, fuzzy
 msgid ""
 "A halberd is a heavy weapon and difficult to use, but very powerful in the "
 "hands of an expert. It is also much more flexible than the spear from which "
@@ -2470,7 +2467,6 @@ msgstr "Maestro d'armi"
 
 #. [unit_type]: id=Master at Arms, race=human
 #: data/core/units/humans/Loyalist_Master_at_Arms.cfg:21
-#, fuzzy
 msgid ""
 "Master fencers have an envied place in life. Though the journey to their "
 "station was a dangerous way of life, they have reached the time wherein they "
@@ -2484,16 +2480,16 @@ msgid ""
 "positions in which their flamboyant nature is not only accepted, but is "
 "perhaps even useful."
 msgstr ""
-"I maestri spadaccini occupano un posto invidiabile. Sebbene per raggiungere "
-"tale posizione abbiano dovuto adottare uno stile di vita pericoloso, è "
-"giunto il momento della meritata ricompensa. Famosi per l'abilità e "
-"l'eleganza, questi gentiluomini hanno una natura aristocratica e sono "
-"costantemente sotto gli occhi di molte nobili donne.\n"
+"I maestri spadaccini occupano un posto invidiabile nella scala sociale. "
+"Sebbene per raggiungere tale posizione abbiano dovuto adottare uno stile di "
+"vita pericoloso, è giunto il momento della meritata ricompensa. Famosi per "
+"l'abilità e l'eleganza, questi gentiluomini hanno una natura aristocratica e "
+"sono costantemente sotto gli occhi di molte nobildonne.\n"
 "\n"
 "Spesso hanno la possibilità di scegliere i loro appuntamenti e sono liberi "
 "di muoversi nelle terre come meglio credono. Spesso si possono trovare al "
 "comando delle guardie dei castelli o a insegnare nelle accademie militari, "
-"posizioni in cui la loro funambolica natura non solo è accettata, è molto "
+"posizioni in cui la loro funambolica natura non solo è accettata, ma è molto "
 "utile."
 
 #. [unit_type]: id=Pikeman, race=human
@@ -3370,7 +3366,6 @@ msgstr "Ranger"
 
 #. [unit_type]: id=Ranger, race=human
 #: data/core/units/humans/Woodsman_Ranger.cfg:22
-#, fuzzy
 msgid ""
 "Rangers are wild men and wanderers, who have chosen to shun the company of "
 "their fellow men for myriad reasons. They have spent the better part of "
@@ -3392,12 +3387,12 @@ msgstr ""
 "soltanto arbusti e pietre.\n"
 "\n"
 "La presenza di questi uomini genera malumore tra i governanti più "
-"autoritari; essi tendono ad essere elementi che i cavalieri e la truppa non "
+"autoritari: essi tendono ad essere elementi che i cavalieri e la truppa non "
 "riescono a controllare. Sono altresì uomini dalle dubbie motivazioni, e sono "
 "i primi a farsi beffe di un decreto reale, se mai hanno prestato attenzione "
 "ad uno di essi. I ranger possono essere ingaggiati come mercenari, ma è "
-"altrettanto facile che siano impiegati da un gruppo di banditi, quanto che "
-"siano al servizio del re."
+"altrettanto facile che siano impiegati da un gruppo di banditi, piuttosto "
+"che al servizio del re."
 
 #. [unit_type]: id=Trapper, race=human
 #: data/core/units/humans/Woodsman_Trapper.cfg:4
@@ -4088,13 +4083,6 @@ msgstr "Mirmidona naga"
 
 #. [female]
 #: data/core/units/nagas/Myrmidon.cfg:96
-#, fuzzy
-#| msgid ""
-#| "The most practiced of the nagani blademasters are initiated into the "
-#| "caste of the Myrmidon, masters of their twin-bladed art. They strike as "
-#| "fast as the snakes which they resemble, and dance away from attacks with "
-#| "grace. Not only are they potent enemies on any open terrain, but their "
-#| "ability to swim allows them a deadly mobility."
 msgid ""
 "The most practiced of the nagini blademasters are initiated into the caste "
 "of the Myrmidon, masters of their twin-bladed art. They strike as fast as "
@@ -4137,14 +4125,6 @@ msgstr "Naga guerriera"
 
 #. [female]
 #: data/core/units/nagas/Warrior.cfg:93
-#, fuzzy
-#| msgid ""
-#| "Many of the young warriors of the nagani aspire for the day when they "
-#| "merit their second blade. Their martial practice of using twin blades is "
-#| "wholly unlike that of the Orcs and other races, for they have begun to "
-#| "learn the art of using their serpentine form to best effect, twisting and "
-#| "turning to dodge from blows. This makes them potent on land, but the "
-#| "friction of water greatly impedes their ability to do this."
 msgid ""
 "Many of the young warriors of the nagini aspire for the day when they merit "
 "their second blade. Their martial practice of using twin blades is wholly "
@@ -4155,7 +4135,7 @@ msgid ""
 msgstr ""
 "Molte delle giovani guerriere naga attendono il giorno in cui meriteranno la "
 "loro seconda lama. La loro pratica marziale nell’utilizzo delle lame è del "
-"tutti diversa da quella degli orchi e delle altre razze in quanto hanno "
+"tutto diversa da quella degli orchi e delle altre razze in quanto hanno "
 "imparato a usare la loro forma serpentina per ottenere effetti inaspettati, "
 "piroettando e contorcendosi per schivare i colpi. Ciò le rende potenti sulla "
 "terra, ma la frizione dell’acqua rende molto difficile questa loro abilità."
@@ -4287,7 +4267,6 @@ msgstr "Orco comandante"
 
 #. [unit_type]: id=Orcish Leader, race=orc
 #: data/core/units/orcs/Leader.cfg:20
-#, fuzzy
 msgid ""
 "Unusually cunning orcs tend to find themselves as the leaders of warrior "
 "bands. They carry a crossbow out of necessity, but are much more skilled "
@@ -4295,11 +4274,11 @@ msgid ""
 "certain rapport with their kin, especially goblins, and can inspire them to "
 "fight with uncharacteristic boldness."
 msgstr ""
-"Gli orchi comandanti sono i capi delle loro tribù. Sono equipaggiati con "
-"archi che usano se necessario, ma sono nettamente più abili con la spada; "
-"nell’insieme, sono potenti combattenti, ma possono anche intrattenere "
-"relazioni con i loro simili, specialmente goblin, e possono spingerli a "
-"combattere con insolito ardore."
+"Di solito gli orchi più furbi tendono a trovarsi a capo delle loro tribù. "
+"Sono equipaggiati con balester che usano se necessario, ma sono nettamente "
+"più abili con la spada. Nell’insieme, sono potenti combattenti, ma possono "
+"anche intrattenere relazioni con i loro simili, specialmente goblin, e "
+"possono spingerli a combattere con insolito ardore."
 
 #. [unit_type]: id=Orcish Ruler, race=orc
 #: data/core/units/orcs/Ruler.cfg:4
@@ -4308,7 +4287,6 @@ msgstr "Orco dominatore"
 
 #. [unit_type]: id=Orcish Ruler, race=orc
 #: data/core/units/orcs/Ruler.cfg:19
-#, fuzzy
 msgid ""
 "Any orc who can keep a large tribe from feuding and in-fighting is often "
 "unusually intelligent and commanding, and is inevitably very strong as well. "
@@ -4319,9 +4297,9 @@ msgstr ""
 "Qualunque orco che riesca a mantenere una tribù lontana dalle lotte "
 "intestine e dalle dispute feudali è spesso intelligente e autoritario, "
 "nonché inevitabilmente altrettanto forte. Questi orchi sono abili nel "
-"maneggiare sia la spada che l’arco, ma il loro migliore talento è la loro "
-"rara abilità di guidare gli altri orchi in battaglia, di impartire ordini "
-"che vengono eseguiti non senza paura, ma fedelmente. "
+"maneggiare sia la spada che la balestra, ma il loro migliore talento è la "
+"loro rara abilità di guidare gli altri orchi in battaglia, di impartire "
+"ordini che vengono eseguiti non senza paura, ma fedelmente. "
 
 #. [attack]: type=blade
 #: data/core/units/orcs/Ruler.cfg:40 data/core/units/orcs/Sovereign.cfg:41
@@ -4899,7 +4877,6 @@ msgstr "Mago oscuro"
 
 #. [unit_type]: id=Dark Sorcerer, race=human
 #: data/core/units/undead/Necro_Dark_Sorcerer.cfg:21
-#, fuzzy
 msgid ""
 "The dread inspired by black magic is enhanced by the secrecy and fell rumors "
 "which surround it. Dark sorcerers have begun to unlock the secrets of life "
@@ -4917,10 +4894,10 @@ msgid ""
 "a loyalty any tyrant would dream of, and it is tempting to those with even "
 "the slightest desire for power."
 msgstr ""
-"Il terrore emanato dalla magia nera proviene principalmente dalla scarsa "
-"conoscenza che ne ha l’uomo comune. I maghi oscuri hanno iniziato a svelare "
-"i segreti della vita e della morte, quest’ultima fin troppo facile da "
-"dispensare. Questi sforzi hanno portato i primi barlumi di conoscenza sui "
+"Il terrore emanato dalla magia nera proviene principalmente dall'alone di "
+"segretezza ed incertezza che la circonda. I maghi oscuri hanno iniziato a "
+"svelare i segreti della vita e della morte, quest’ultima fin troppo facile "
+"da dispensare. Questi sforzi hanno portato i primi barlumi di conoscenza sui "
 "legami tra l’anima e la materia inerte, e i primi esperimenti coronati dal "
 "successo nella manipolazione di questi confini. Il terribile segreto che "
 "aleggia al di là della morte inizia ad intravedersi, e inevitabilmente verrà "
@@ -4932,8 +4909,8 @@ msgstr ""
 "applicazione. La vita che infondono nella materia morta è in grado di creare "
 "dei servitori, che lavoreranno, ma anche che uccideranno, e che non faranno "
 "mai questioni con i loro padroni. Queste creature hanno un fedeltà per la "
-"quale qualsiasi tiranno farebbe carte false, ed è anche per loro tentatore "
-"il più mero dei desideri di potere."
+"quale farebbe carte false non solo qualsiasi tiranno, ma anche chi non ha "
+"particolari ambizioni di potere."
 
 #. [female]
 #: data/core/units/undead/Necro_Dark_Sorcerer.cfg:251
@@ -5085,7 +5062,7 @@ msgstr ""
 #. [unit_type]: id=Chocobone, race=undead
 #: data/core/units/undead/Skele_Chocobone.cfg:4
 msgid "Chocobone"
-msgstr "Cavalcatore d’ossa"
+msgstr "Cavalcaossi"
 
 #. [unit_type]: id=Chocobone, race=undead
 #: data/core/units/undead/Skele_Chocobone.cfg:24
@@ -5094,8 +5071,8 @@ msgid ""
 "civilization, the skeletal Chocobones can move faster than most cavalry "
 "units."
 msgstr ""
-"Cavalcando le ossa di grossi uccelli simili a struzzi usati come trasporto "
-"da una perduta civiltà, i cavalcatori d’ossa possono muoversi più "
+"Cavalcando gli ossi di grossi uccelli simili a struzzi usati come trasporto "
+"da una perduta civiltà, i cavalcatori d’ossi possono muoversi più "
 "velocemente della maggior parte delle truppe di cavalleria."
 
 #. [unit_type]: id=Death Knight, race=undead
@@ -5165,7 +5142,6 @@ msgstr "Revenente"
 
 #. [unit_type]: id=Revenant, race=undead
 #: data/core/units/undead/Skele_Revenant.cfg:19
-#, fuzzy
 msgid ""
 "Given false life to do battle once more, the creatures known as Revenants "
 "were clearly great warriors in their time, though the memory of that time is "
@@ -5426,17 +5402,14 @@ msgstr ""
 "I wose sono solitamente pacifici ma possiedono una grande forza. Non amano "
 "però spostarsi, e sono molto lenti nel farlo."
 
-#, fuzzy
 #~| msgid "longsword"
 #~ msgid "long sword"
 #~ msgstr "spadone"
 
-#, fuzzy
 #~| msgid "Elder Mage"
 #~ msgid "Elder Falcon"
 #~ msgstr "Mago anziano"
 
-#, fuzzy
 #~| msgid "fire claws"
 #~ msgid "fire arrow"
 #~ msgstr "artigli di fuoco"
