updated Hungarian translation

--- a/po/wesnoth-help/hu.po
+++ b/po/wesnoth-help/hu.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: hu-wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-08 18:12+0100\n"
-"PO-Revision-Date: 2012-01-17 07:50+0100\n"
+"PO-Revision-Date: 2012-01-20 18:48+0100\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "Language: hu\n"
@@ -1093,7 +1093,7 @@ msgstr ""
 "vívott csaták zajától hangos. A felvidéki tündék messze keleten élnek, ahol "
 "a hírek szerint egy hatalmas birodalmuk van.\n"
 "\n"
-"    • Notable cities:\n"
+"    • Jelentős városok:\n"
 "          ◦ Barag Gor, az Ork Tanács székhelye.\n"
 "          ◦ Bitok\n"
 "          ◦ Borstep\n"
